--- a/GorillaWear/GorillaWear/Properties/Resources.resx
+++ b/GorillaWear/GorillaWear/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="gorilla-wear-high-tops-red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gorilla-wear-high-tops-red.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="gorilla-wear-high-tops-red-sfeerbeeld" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gorilla-wear-high-tops-red-sfeerbeeld.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="gorilla-wear-high-tops-red (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gorilla-wear-high-tops-red (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,6 +157,9 @@
   <data name="wqd_00006" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wqd_00006.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gorilla-wear-high-tops-red-sfeerbeeld" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gorilla-wear-high-tops-red-sfeerbeeld.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hi.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -172,6 +172,12 @@
   <data name="modern-silverback-gorilla-mascot-logo-vector-30285287_000001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\modern-silverback-gorilla-mascot-logo-vector-30285287_00000.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PngItem_5381119" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PngItem_5381119.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Comp 1_00000" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Comp 1_00000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="henry-cavill-portrait-photoshoot-english-actor-monochrome" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\henry-cavill-portrait-photoshoot-english-actor-monochrome.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -181,7 +187,7 @@
   <data name="90516900-melbourne-sleeveless-hooded-tshirt-front_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\90516900-melbourne-sleeveless-hooded-tshirt-front_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Comp 1_00000" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Comp 1_00000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
